# Mondot-Shell

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  run.py  setup.py
.github/workflows/: build-executables.yaml  build.yaml  python-unittest.yaml  test.yaml
mondot/: code.py  error.py  page.py  pages.py  paginator.py  shell.py
src/mondot/: page.py  paginator.py  shell.py
src/mondot_shell/: code.py  page.py  paginator.py  runner.py  shell.py
tests/: fail_parse_test.py  hello_world_test.py  raise_exception_test.py  range_1_to_100_.py  range_1_to_100_test.py  range_1_to_10_test.py  range_iterator_1_to_100_test.py  test_shell.py
tests/code/error/: fail_parse.py  raise_exception.py
tests/code/iterator/: range_iterator_1_to_100.py
tests/code/list/: range_1_to_10.py  range_1_to_100.py
