[project]
name = "mondot_shell"
version = "2.0.0"
description = "Shell for Mondot GUI"
authors = [
    {name = "thiagola92", email = "thiagola92@gmail.com"},
]
dependencies = [
    "pyinstaller>=4.5.1",
    "pymongo[srv]>=4.5.0",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}
