[project]
name = "mondot_shell"
version = "2.0.0"
description = "Shell for Mondot GUI"
authors = [
    {name = "thiagola92", email = "thiagola92@gmail.com"},
]
dependencies = [
    "pymongo[srv]>=4.5.0",
    "pyinstaller==5.13.2",
]
requires-python = ">=3.11,<3.13"
readme = "README.md"
license = {text = "MIT"}

[tool.pdm.dev-dependencies]
dev = []

[tool.pdm.scripts]
unittest = "python -m unittest discover --verbose --failfast --start-directory ./tests --pattern *_test.py"